# rdsmath

./: Cargo.toml  README.md
src/: lib.rs
src/consts/: mod.rs
src/exp/: mod.rs
src/round/: mod.rs
src/trig/: mod.rs
src/util/: mod.rs
